--- a/layout/_partial/header.ejs
+++ b/layout/_partial/header.ejs
@@ -1,33 +1,10 @@
-<!-- BEGIN TOP BAR -->
-<div class="pre-header">
-  <div class="container">
-    <div class="row">
-      <!-- BEGIN TOP BAR LEFT PART -->
-      <div class="col-md-6 col-sm-6 col-xs-9 additional-shop-info">
-	<ul class="list-unstyled list-inline">
-	  <li><i class="fa fa-phone"></i><span><%= theme.phone %></span></li>
-	  <li><i class="fa fa-envelope-o"></i><span><%= theme.email %></span></li>
-	</ul>
-      </div>
-      <!-- END TOP BAR LEFT PART -->
-      <!-- BEGIN TOP BAR MENU -->
-      <div class="col-md-6 col-sm-6 col-xs-3 additional-nav">
-	<ul class="list-unstyled list-inline pull-right">
-	  <li><a href="/login">Log In</a></li>
-	</ul>
-      </div>
-      <!-- END TOP BAR MENU -->
-    </div>
-  </div>        
-</div>
-<!-- END TOP BAR -->
 <!-- BEGIN HEADER -->
 <div class="header">
   <div class="container">
     <!--<a class="site-logo" href="<%- url_for() %>" id="logo"><%= config.title %></a>-->
 
     <a class="site-logo" href="/">
-      <img src="<%- url_for('metronic/assets/corporate/img/logos/logo-corp-' + theme.color_scheme + '.png') %>" alt="Metronic FrontEnd">
+      <img src="<%- url_for('/images/logo32.png') %>" alt="Yihui's puzzle">
     </a>
 
     <a href="javascript:void(0);" class="mobi-toggler"><i class="fa fa-bars"></i></a>
